:green_heart: fixing CI issue

--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,10 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <sourceDirs>${project.basedir}/src/main/kotlin</sourceDirs>
-                            <sourceDirs>${project.basedir}/src/main/java</sourceDirs>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            </sourceDirs>
                         </configuration>
                     </execution>
                     <execution>
@@ -62,8 +64,10 @@
                             <goal>test-compile</goal>
                         </goals>
                         <configuration>
-                            <sourceDirs>${project.basedir}/src/main/kotlin</sourceDirs>
-                            <sourceDirs>${project.basedir}/src/main/java</sourceDirs>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            </sourceDirs>
                         </configuration>
                     </execution>
                 </executions>
