--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,22 @@
     <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Whicher</name>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Locate a program in the user's path</description>
+    <url>https://github.com/Drako/whicher</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:https://github.com/Drako/whicher.git</connection>
+        <developerConnection>scm:git:git@github.com:Drako/whicher.git</developerConnection>
+        <url>https://github.com/Drako/whicher</url>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
