source jar generation fixed

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
     </pluginRepositories>
 
     <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
