javadoc jar generation fixed

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
                     </execution>
                     <execution>
                         <id>attach-javadocs</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>javadocJar</goal>
                         </goals>
