--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # idea stuff
-.idea/libraries/
+.idea/checkstyle-idea.xml
+.idea/compiler.xml
+.idea/google-java-format.xml
 .idea/inspectionProfiles/
+.idea/kotlinc.xml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
 .idea/workspace.xml
 *.iml
 
