--- a/pom.xml
+++ b/pom.xml
@@ -45,21 +45,21 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.2-5</kotlin.version>
+        <kotlin.version>1.2.60</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <dokka.version>0.9.14</dokka.version>
+        <dokka.version>0.9.17</dokka.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>io.kotlintest</groupId>
             <artifactId>kotlintest</artifactId>
-            <version>2.0.3</version>
+            <version>2.0.7</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
